Tue Nov  3 06:18:21 2015  Eric Wong  <e@80x24.org>

	* variable.c (rb_global_tbl): convert to id_table

Tue Nov  3 01:58:46 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* parse.y (NO_QCALL): fix type mismatch of operands that causes
	  compile error with Oracle Solaris Studio on Solaris.
	  [Bug #11645] [ruby-dev:49327]

Mon Nov  2 20:07:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lbracket): support .? before aref.  [Feature #11537]

Sun Nov  1 17:14:36 2015  Koichi Sasada  <ko1@atdot.net>

	* id_table.c (mix_id_table_insert): do not touch list during
	  list->hash transition because GC can run during transition.

Sun Nov  1 11:07:31 2015  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_memsize): account for rb_call_cache entries

Sun Nov  1 09:12:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): ':' separated by a comment and a newline
	  is not valid as symbol.

Sat Oct 31 20:15:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/openssl/test_pair.rb: skipped tests if openssl doesn't support
	  ECDH cipher.

Sat Oct 31 14:58:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as
	  it does not allow spaces before its argument.
	  [ruby-core:71283] [Bug #11641]

Sat Oct 31 14:58:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as
	  it does not allow spaces before its argument.
	  [ruby-core:71283] [Bug #11641]

Sat Oct 31 10:22:49 2015  yui-knk  <spiketeika@gmail.com>

	* eval_error.c (undef_mesg_for): fix typo.  Before this commit
	  `ArgumentError: malformed format string - %$` was raised when
	  `NameError#message` is called.  [ruby-core:71282] [Bug #11640]
	  [Fix GH-1077]

Fri Oct 30 21:12:45 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: update to power_assert 0.2.5.

Fri Oct 30 19:29:52 2015  Koichi Sasada  <ko1@atdot.net>
